# BackupScript

./: .gitignore  LICENSE  README.md  README.org  setup.sh
BackupScript/: pyproject.toml  setup.cfg
BackupScript/backupscript/: BackupManager.py
BackupScript/tests/: test_backupscript.py
