[tool.poetry]
name = "BackupScript"
version = "1.0.0"
description = ""
authors = ["smilesT"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
backup = 'BackupManager:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
